--- a/homework/typography.html
+++ b/homework/typography.html
@@ -57,3 +57,23 @@
 <hr align="center" size="20" width="45%" color="black">
 </body>
 </html>
+
+<!-- 1.2 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<h4>Российская Федерация</h4>
+<p>Паспорт выдан <span>Отделом Внутренних дел Октябрьского округа города Архангельска</span></p>
+<p>Дата выдачи <span>17.12.2004</span></p>
+<p>Фамилия <span>Иванов</span></p>
+<p>Имя <span>Иван</span></p>
+<p>Отчество <span>Иванович</span></p>
+<p>Пол <span> МУЖ</span></p>
+<p>Год рождения <span>01.01.2000</span></p>
+<img src="скрин.png">
+</body>
+</html>
