--- a/homework/function.html
+++ b/homework/function.html
@@ -12,5 +12,5 @@
 <p id="for_click">кликнуть</p>
 
 </body>
-<script src="./homework/function.js"></script>
+<script src="hse/homework/function.js"></script>
 </html>
