--- a/кр1/page2.html
+++ b/кр1/page2.html
@@ -7,7 +7,7 @@
 <body bgcolor="f7dcdd">
 
  <! Навигация-->
-<h1><a href="основная страница.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
+<h1><a href="index.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="page2.html"> <u> кто исследовал детство?</u></a></h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="#all">конец страницы</a></h1>
 
