--- a/кр1/index.html
+++ b/кр1/index.html
@@ -15,10 +15,10 @@
 
 </table>
 
-<a style="position: absolute; top: 140px; left: 870px;"  href="../кр 1/основная страница.html" target="_self"><img height="150px" src="./бестиарий.png"></a>
+<a style="position: absolute; top: 140px; left: 870px;"  href="../кр 1/index.html" target="_self"><img height="150px" src="hse/кр1/бестиарий.png"></a>
 <img style="position: absolute; top: 140px; left: 1140px" src="hse/кр1/бестиарий.png" height="150px" align="right">
-<img style="position: absolute; top: 280px; left: 1140px" src="./бестиарий.png" height="150px" align="right">
-<img style="position: absolute; top: 280px; left: 870px" src="./бестиарий.png" height="150px" align="right">
+<img style="position: absolute; top: 280px; left: 1140px" src="hse/кр1/бестиарий.png" height="150px" align="right">
+<img style="position: absolute; top: 280px; left: 870px" src="hse/кр1/бестиарий.png" height="150px" align="right">
 
 <h4><a style="position: absolute; top: 440px; left: 1100px; color: #b03f35; text-decoration: none;" href="https://vk.com/bestiary5plus">Бестиарий 5+</a></h4>
 
@@ -40,7 +40,7 @@
 <table border="1" style="position: absolute; top: 500px; left: 460px;" width="600">
   <thead>
     <tr height ="70">
-        <th colspan="3" bgcolor="#fffab8"><h2 id="meow2"><font face="ms sans serif" color="b03f35"><a style="text-decoration: none; color: #b03f35" href="../кр 1/основная страница.html" target="_self">как зовут моих друзей?</a></font></h2></th>
+        <th colspan="3" bgcolor="#fffab8"><h2 id="meow2"><font face="ms sans serif" color="b03f35"><a style="text-decoration: none; color: #b03f35" href="../кр 1/index.html" target="_self">как зовут моих друзей?</a></font></h2></th>
 
     </tr>
   </thead>
@@ -76,22 +76,22 @@
 
 <h1 id="head1" style="background-color: #b03f35; color: white; position: absolute; top: 900px;">лёва</h1>
 
-<img style="position: absolute; top: 1000px; left: 30px" src="./лёва.png" height="200px">
+<img style="position: absolute; top: 1000px; left: 30px" src="hse/кр1/лёва.png" height="200px">
 
-<img style="position: absolute; top: 1000px; left: 430px" src="./утки.png" height="200px">
+<img style="position: absolute; top: 1000px; left: 430px" src="hse/кр1/утки.png" height="200px">
 
-<img style="position: absolute; top: 1000px; left: 830px" src="./тигр.png" height="200px">
+<img style="position: absolute; top: 1000px; left: 830px" src="hse/кр1/тигр.png" height="200px">
 
 
 
 
 <h1 id="head2" style="background-color: #b03f35; color: white; position: absolute; top: 1200px;">эльмисхан</h1>
 
-<img style="position: absolute; top: 1300px; left: 30px" src="./эльмис.png" height="200px">
+<img style="position: absolute; top: 1300px; left: 30px" src="hse/кр1/эльмис.png" height="200px">
 
-<img style="position: absolute; top: 1300px; left: 430px" src="./кошка.png" height="200px">
+<img style="position: absolute; top: 1300px; left: 430px" src="hse/кр1/кошка.png" height="200px">
 
-<img style="position: absolute; top: 1300px; left: 830px" src="./дом.jpeg" height="200px">
+<img style="position: absolute; top: 1300px; left: 830px" src="hse/кр1/дом.jpeg" height="200px">
 
 
 
@@ -99,35 +99,35 @@
 
 <h1 id="head3" style="background-color: #b03f35; color: white; position: absolute; top: 1500px;">катя</h1>
 
-<img style="position: absolute; top: 1600px; left: 30px" src="./сестра.png" height="200px">
+<img style="position: absolute; top: 1600px; left: 30px" src="hse/кр1/сестра.png" height="200px">
 
-<img style="position: absolute; top: 1600px; left: 430px" src="./зайка.png" height="200px">
+<img style="position: absolute; top: 1600px; left: 430px" src="hse/кр1/зайка.png" height="200px">
 
-<img style="position: absolute; top: 1600px; left: 830px" src="./нг.png" height="200px">
+<img style="position: absolute; top: 1600px; left: 830px" src="hse/кр1/нг.png" height="200px">
 
 
 
 <h1 id="head4" style="background-color: #b03f35; color: white; position: absolute; top: 1800px;">миша</h1>
 
-<img style="position: absolute; top: 1900px; left: 30px" src="./млев.png" height="200px">
+<img style="position: absolute; top: 1900px; left: 30px" src="hse/кр1/млев.png" height="200px">
 
-<img style="position: absolute; top: 1900px; left: 430px" src="./зима.png" height="200px">
+<img style="position: absolute; top: 1900px; left: 430px" src="hse/кр1/зима.png" height="200px">
 
 
 
 
 <h1 id="head5" style="background-color: #b03f35; color: white; position: absolute; top: 2100px;">полина и катя</h1>
 
-<img style="position: absolute; top: 2200px; left: 30px" src="./катя.png" height="200px">
+<img style="position: absolute; top: 2200px; left: 30px" src="hse/кр1/катя.png" height="200px">
 
-<img style="position: absolute; top: 2200px; left: 430px" src="./поля.png" height="200px">
+<img style="position: absolute; top: 2200px; left: 430px" src="hse/кр1/поля.png" height="200px">
 
 
 
 
 <h1 id="head6" style="background-color: #b03f35; color: white; position: absolute; top: 2400px;">маша</h1>
 
-<img style="position: absolute; top: 2500px; left: 30px" src="./автопортрет.png" height="200px">
+<img style="position: absolute; top: 2500px; left: 30px" src="hse/кр1/автопортрет.png" height="200px">
 
 
 
