--- a/кр1/page2.html
+++ b/кр1/page2.html
@@ -16,25 +16,25 @@
 
 
 <figure class="sign">
-<img style="position: absolute; top: 250px; left: 430px;" height="200px" src="./арьес.png">
+<img style="position: absolute; top: 250px; left: 430px;" height="200px" src="hse/кр1/арьес.png">
 <figcaption><h2 style="position: absolute; top: 440px; left: 545px; color: #484848;">Филипп Арьес</h2></figcaption>
 </figure>
 
 
 
 <figure class="sign">
-<img style="position: absolute; top: 550px; left: 230px;" height="200px" src="./пиаже.png">
+<img style="position: absolute; top: 550px; left: 230px;" height="200px" src="hse/кр1/пиаже.png">
 <figcaption><h2 style="position: absolute; top: 740px; left: 245px; color: #484848;">Жан Пиаже</h2></figcaption>
 </figure>
 
 
 <figure class="sign">
-<img style="position: absolute; top: 740px; left: 645px;" height="200px" src="./чуковский.png">
+<img style="position: absolute; top: 740px; left: 645px;" height="200px" src="hse/кр1/чуковский.png">
 <figcaption><h2 style="position: absolute; top: 940px; left: 685px; color: #484848;">Корней Чуковский</h2></figcaption>
 </figure>
 
 <figure class="sign">
-<img style="position: absolute; top: 410px; left: 985px;" height="200px" src="./мид.png">
+<img style="position: absolute; top: 410px; left: 985px;" height="200px" src="hse/кр1/мид.png">
 <figcaption><h2 style="position: absolute; top: 600px; left: 1065px; color: #484848;">Маргарет Мид</h2></figcaption>
 </figure>
 
