--- a/кр1/page3.html
+++ b/кр1/page3.html
@@ -8,7 +8,7 @@
 
 
 <! Навигация-->
-<h1><a href="основная страница.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
+<h1><a href="основная index.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="page3.html"><u>детство сейчас — это...</u> </a></h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="#all2">конец страницы</a></h1>
 
@@ -60,12 +60,12 @@
 
        <tr height="200">
          <td> <a  align="center" style="color: #696969; text-decoration: none;" href="https://vk.com/bestiary5plus?z=photo-136582241_457246535%2Falbum-136582241_00%2Frev"><h2>лев петров. 4 года</h2></a></td>
-         <td><img src="./лев петров.png" height="200"></td>
+         <td><img src="hse/кр1/лев петров.png" height="200"></td>
     </tr>
 </table>
 
 
-<a id="all2" style="position: absolute; top: 2200px; left: 750px;"  href="./бестиарий.png" target="_top"><img height="50px" src="./бестиарий.png"></a>
+<a id="all2" style="position: absolute; top: 2200px; left: 750px;"  href="./бестиарий.png" target="_top"><img height="50px" src="hse/кр1/бестиарий.png"></a>
 
 
 </body>
