--- a/кр1/page4.html
+++ b/кр1/page4.html
@@ -8,7 +8,7 @@
 
 
 <! Навигация-->
-<h1><a href="основная страница.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
+<h1><a href="index.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
  <h1><a style="color:#b03f35; text-decoration: none;" href="page4.html"><u>рекомендованная литература</u></a></h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="#all3">конец страницы</a></h1>
 
@@ -27,6 +27,6 @@
       <li>Жан Пиаже. Речь и мышление ребёнка</li> </h3>
   </ol>
 
-<a id="all3" style="position: absolute; top: 1300px; left: 750px;"  href="./бестиарий.png" target="_top"><img height="50px" src="./бестиарий.png"></a>
+<a id="all3" style="position: absolute; top: 1300px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="hse/кр1/бестиарий.png"></a>
 </body>
 </html>
