--- a/кр1/page3.html
+++ b/кр1/page3.html
@@ -8,7 +8,7 @@
 
 
 <! Навигация-->
-<h1><a href="основная index.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
+<h1><a href="index.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="page3.html"><u>детство сейчас — это...</u> </a></h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="#all2">конец страницы</a></h1>
 
