--- a/кр1/page5.html
+++ b/кр1/page5.html
@@ -7,7 +7,7 @@
 <body bgcolor="f7dcdd">
 
 <! Навигация-->
-<h1><a href="основная страница.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
+<h1><a href="index.html" style="color:#b03f35; text-decoration: none;">к первой странице</a><h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="page5.html"><u>опрос</u></a></h1>
 <h1><a style="color:#b03f35; text-decoration: none;" href="#all4">конец страницы</a></h1>
 
@@ -30,6 +30,6 @@
     <input type = "submit" name = "submit" value = "Отправить">
 </form>
 
-<a id="all4" style="position: absolute; top: 1300px; left: 750px;"  href="./бестиарий.png" target="_top"><img height="50px" src="./бестиарий.png"></a>
+<a id="all4" style="position: absolute; top: 1300px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="hse/кр1/бестиарий.png"></a>
 </body>
 </html>
