--- a/кр1/index.html
+++ b/кр1/index.html
@@ -16,7 +16,7 @@
 </table>
 
 <a style="position: absolute; top: 140px; left: 870px;"  href="hse/кр1/index.html" target="_self"><img height="150px" src="./бестиарий.png"></a>
-<img style="position: absolute; top: 140px; left: 1140px" src="lizameow/hse/кр1/бестиарий.png" height="150px" align="right">
+<img style="position: absolute; top: 140px; left: 1140px" src="lizameow.github.io/hse/кр1/бестиарий.png" height="150px" align="right">
 <img style="position: absolute; top: 280px; left: 1140px" src="./бестиарий.png" height="150px" align="right">
 <img style="position: absolute; top: 280px; left: 870px" src="./бестиарий.png" height="150px" align="right">
 
