--- a/кр1/index.html
+++ b/кр1/index.html
@@ -15,10 +15,10 @@
 
 </table>
 
-<a style="position: absolute; top: 140px; left: 870px;"  href="lizameow.github.io/index.html" target="_self"><img height="150px" src="./бестиарий.png"></a>
-<img style="position: absolute; top: 140px; left: 1140px" src="lizameow.github.io/бестиарий.png" height="150px" align="right">
-<img style="position: absolute; top: 280px; left: 1140px" src="lizameow.github.io/hse/кр1/бестиарий.png" height="150px" align="right">
-<img style="position: absolute; top: 280px; left: 870px" src="lizameow.github.io/hse/кр1/бестиарий.png" height="150px" align="right">
+<a style="position: absolute; top: 140px; left: 870px;"  href="lizameow.github.io/index.html" target="_self"><img height="150px" src="бестиарий.png"></a>
+<img style="position: absolute; top: 140px; left: 1140px" src="бестиарий.png" height="150px" align="right">
+<img style="position: absolute; top: 280px; left: 1140px" src="бестиарий.png" height="150px" align="right">
+<img style="position: absolute; top: 280px; left: 870px" src="бестиарий.png" height="150px" align="right">
 
 <h4><a style="position: absolute; top: 440px; left: 1100px; color: #b03f35; text-decoration: none;" href="https://vk.com/bestiary5plus">Бестиарий 5+</a></h4>
 
