--- a/кр1/index.html
+++ b/кр1/index.html
@@ -76,22 +76,22 @@
 
 <h1 id="head1" style="background-color: #b03f35; color: white; position: absolute; top: 900px;">лёва</h1>
 
-<img style="position: absolute; top: 1000px; left: 30px" src="hse/кр1/лёва.png" height="200px">
+<img style="position: absolute; top: 1000px; left: 30px" src="лёва.png" height="200px">
 
-<img style="position: absolute; top: 1000px; left: 430px" src="hse/кр1/утки.png" height="200px">
+<img style="position: absolute; top: 1000px; left: 430px" src="утки.png" height="200px">
 
-<img style="position: absolute; top: 1000px; left: 830px" src="hse/кр1/тигр.png" height="200px">
+<img style="position: absolute; top: 1000px; left: 830px" src="тигр.png" height="200px">
 
 
 
 
 <h1 id="head2" style="background-color: #b03f35; color: white; position: absolute; top: 1200px;">эльмисхан</h1>
 
-<img style="position: absolute; top: 1300px; left: 30px" src="hse/кр1/эльмис.png" height="200px">
+<img style="position: absolute; top: 1300px; left: 30px" src="эльмис.png" height="200px">
 
-<img style="position: absolute; top: 1300px; left: 430px" src="hse/кр1/кошка.png" height="200px">
+<img style="position: absolute; top: 1300px; left: 430px" src="кошка.png" height="200px">
 
-<img style="position: absolute; top: 1300px; left: 830px" src="hse/кр1/дом.jpeg" height="200px">
+<img style="position: absolute; top: 1300px; left: 830px" src="дом.jpeg" height="200px">
 
 
 
@@ -99,35 +99,35 @@
 
 <h1 id="head3" style="background-color: #b03f35; color: white; position: absolute; top: 1500px;">катя</h1>
 
-<img style="position: absolute; top: 1600px; left: 30px" src="hse/кр1/сестра.png" height="200px">
+<img style="position: absolute; top: 1600px; left: 30px" src="сестра.png" height="200px">
 
-<img style="position: absolute; top: 1600px; left: 430px" src="hse/кр1/зайка.png" height="200px">
+<img style="position: absolute; top: 1600px; left: 430px" src="зайка.png" height="200px">
 
-<img style="position: absolute; top: 1600px; left: 830px" src="hse/кр1/нг.png" height="200px">
+<img style="position: absolute; top: 1600px; left: 830px" src="нг.png" height="200px">
 
 
 
 <h1 id="head4" style="background-color: #b03f35; color: white; position: absolute; top: 1800px;">миша</h1>
 
-<img style="position: absolute; top: 1900px; left: 30px" src="hse/кр1/млев.png" height="200px">
+<img style="position: absolute; top: 1900px; left: 30px" src="млев.png" height="200px">
 
-<img style="position: absolute; top: 1900px; left: 430px" src="hse/кр1/зима.png" height="200px">
+<img style="position: absolute; top: 1900px; left: 430px" src="зима.png" height="200px">
 
 
 
 
 <h1 id="head5" style="background-color: #b03f35; color: white; position: absolute; top: 2100px;">полина и катя</h1>
 
-<img style="position: absolute; top: 2200px; left: 30px" src="hse/кр1/катя.png" height="200px">
+<img style="position: absolute; top: 2200px; left: 30px" src="катя.png" height="200px">
 
-<img style="position: absolute; top: 2200px; left: 430px" src="hse/кр1/поля.png" height="200px">
+<img style="position: absolute; top: 2200px; left: 430px" src="поля.png" height="200px">
 
 
 
 
 <h1 id="head6" style="background-color: #b03f35; color: white; position: absolute; top: 2400px;">маша</h1>
 
-<img style="position: absolute; top: 2500px; left: 30px" src="hse/кр1/автопортрет.png" height="200px">
+<img style="position: absolute; top: 2500px; left: 30px" src="автопортрет.png" height="200px">
 
 
 
