--- a/кр1/index.html
+++ b/кр1/index.html
@@ -15,7 +15,7 @@
 
 </table>
 
-<a style="position: absolute; top: 140px; left: 870px;"  href="./index.html" target="_self"><img height="150px" src="бестиарий.png"></a>
+<a style="position: absolute; top: 140px; left: 870px;"  href="index.html" target="_self"><img height="150px" src="бестиарий.png"></a>
 <img style="position: absolute; top: 140px; left: 1140px" src="бестиарий.png" height="150px" align="right">
 <img style="position: absolute; top: 280px; left: 1140px" src="бестиарий.png" height="150px" align="right">
 <img style="position: absolute; top: 280px; left: 870px" src="бестиарий.png" height="150px" align="right">
@@ -40,7 +40,7 @@
 <table border="1" style="position: absolute; top: 500px; left: 460px;" width="600">
   <thead>
     <tr height ="70">
-        <th colspan="3" bgcolor="#fffab8"><h2 id="meow2"><font face="ms sans serif" color="b03f35"><a style="text-decoration: none; color: #b03f35" href="../кр 1/index.html" target="_self">как зовут моих друзей?</a></font></h2></th>
+        <th colspan="3" bgcolor="#fffab8"><h2 id="meow2"><font face="ms sans serif" color="b03f35"><a style="text-decoration: none; color: #b03f35" href="index.html" target="_self">как зовут моих друзей?</a></font></h2></th>
 
     </tr>
   </thead>
