--- a/кр1/page2.html
+++ b/кр1/page2.html
@@ -16,30 +16,30 @@
 
 
 <figure class="sign">
-<img style="position: absolute; top: 250px; left: 430px;" height="200px" src="hse/кр1/арьес.png">
+<img style="position: absolute; top: 250px; left: 430px;" height="200px" src="арьес.png">
 <figcaption><h2 style="position: absolute; top: 440px; left: 545px; color: #484848;">Филипп Арьес</h2></figcaption>
 </figure>
 
 
 
 <figure class="sign">
-<img style="position: absolute; top: 550px; left: 230px;" height="200px" src="hse/кр1/пиаже.png">
+<img style="position: absolute; top: 550px; left: 230px;" height="200px" src="пиаже.png">
 <figcaption><h2 style="position: absolute; top: 740px; left: 245px; color: #484848;">Жан Пиаже</h2></figcaption>
 </figure>
 
 
 <figure class="sign">
-<img style="position: absolute; top: 740px; left: 645px;" height="200px" src="hse/кр1/чуковский.png">
+<img style="position: absolute; top: 740px; left: 645px;" height="200px" src="чуковский.png">
 <figcaption><h2 style="position: absolute; top: 940px; left: 685px; color: #484848;">Корней Чуковский</h2></figcaption>
 </figure>
 
 <figure class="sign">
-<img style="position: absolute; top: 410px; left: 985px;" height="200px" src="hse/кр1/мид.png">
+<img style="position: absolute; top: 410px; left: 985px;" height="200px" src="мид.png">
 <figcaption><h2 style="position: absolute; top: 600px; left: 1065px; color: #484848;">Маргарет Мид</h2></figcaption>
 </figure>
 
 
-<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="hse/кр1/бестиарий.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
 
 </body>
 </html>
