--- a/кр1/page5.html
+++ b/кр1/page5.html
@@ -30,6 +30,6 @@
     <input type = "submit" name = "submit" value = "Отправить">
 </form>
 
-<a id="all4" style="position: absolute; top: 1300px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="hse/кр1/бестиарий.png"></a>
+<a id="all4" style="position: absolute; top: 1300px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
 </body>
 </html>
