--- a/кр1/page2.html
+++ b/кр1/page2.html
@@ -39,7 +39,7 @@
 </figure>
 
 
-<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
 
 </body>
 </html>
