--- a/кр1/page3.html
+++ b/кр1/page3.html
@@ -65,7 +65,7 @@
 </table>
 
 
-<a id="all2" style="position: absolute; top: 2200px; left: 750px;"  href="hse/кр1/бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
+<a id="all2" style="position: absolute; top: 2200px; left: 750px;"  href="бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
 
 
 </body>
