--- a/кр1/page2.html
+++ b/кр1/page2.html
@@ -39,7 +39,8 @@
 </figure>
 
 
-<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарийм.png" target="_blank"><img height="50px" align="middle" src="бестиарийм.png"></a>
+
 
 </body>
 </html>
