--- a/кр1/page4.html
+++ b/кр1/page4.html
@@ -27,6 +27,7 @@
       <li>Жан Пиаже. Речь и мышление ребёнка</li> </h3>
   </ol>
 
-<a id="all3" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарийм.png" target="_blank"><img height="50px" align="middle" src="бестиарийм.png"></a>
+
 </body>
 </html>
