--- a/кр1/page5.html
+++ b/кр1/page5.html
@@ -30,6 +30,7 @@
     <input type = "submit" name = "submit" value = "Отправить">
 </form>
 
-<a id="all4" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарий.png" target="_top"><img height="50px" src="бестиарий.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарийм.png" target="_blank"><img height="50px" align="middle" src="бестиарийм.png"></a>
+
 </body>
 </html>
