--- a/кр1/page5.html
+++ b/кр1/page5.html
@@ -13,7 +13,7 @@
 
  <! Вторая часть сайта-->
 
- <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
+ <form action="" id="UserEnter" name="UserEnter" target="_blank">
     <p>Имя: <input type="Text" name="first_name" size=20  value=""></p>
     <p>Фамилия: <input type="Text" name="last_name" size=20  value=""></p>
     <p>Мужчина <input type = "radio" name = "sex" value = "male"></p>
