--- a/кр1/page2.html
+++ b/кр1/page2.html
@@ -39,7 +39,7 @@
 </figure>
 
 
-<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарийм.png" target="_blank"><img height="50px" align="middle" src="бестиарийм.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="ббб.png" target="_blank"><img height="50px" align="middle" src="ббб.png"></a>
 
 
 </body>
