--- a/кр1/page3.html
+++ b/кр1/page3.html
@@ -65,7 +65,7 @@
 </table>
 
 
-<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарийм.png" target="_blank"><img height="50px" align="middle" src="бестиарийм.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="ббб.png" target="_blank"><img height="50px" align="middle" src="ббб.png"></a>
 
 
 </body>
