--- a/кр1/page4.html
+++ b/кр1/page4.html
@@ -27,7 +27,7 @@
       <li>Жан Пиаже. Речь и мышление ребёнка</li> </h3>
   </ol>
 
-<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="бестиарийм.png" target="_blank"><img height="50px" align="middle" src="бестиарийм.png"></a>
+<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="ббб.png" target="_blank"><img height="50px" align="middle" src="ббб.png"></a>
 
 </body>
 </html>
