--- a/кр1/page5.html
+++ b/кр1/page5.html
@@ -30,7 +30,7 @@
     <input type = "submit" name = "submit" value = "Отправить">
 </form>
 
-<a id="all" style="position: absolute; top: 1300px; left: 750px;"  href="ббб.png" target="_blank"><img height="50px" align="middle" src="ббб.png"></a>
+<a id="all4" style="position: absolute; top: 1300px; left: 750px;"  href="ббб.png" target="_blank"><img height="50px" align="middle" src="ббб.png"></a>
 
 </body>
 </html>
