--- a/passport/index.html
+++ b/passport/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <a href="латиница.html" target="_blank">Изменяем кириллицу на латиницу по клику</a>
+<a href="задача.html" target="_blank">Решение алгоритмической задачи</a> 
 <table border="1" align="center" width="500" background="паспорт1.png">
             <tr>
                  <td>
