--- a/passport/задача.html
+++ b/passport/задача.html
@@ -13,9 +13,9 @@
         <tr>
         <td>
             <p>Можно ли в квадратном зале площадью S поместить круглую сцену радиусом R так, чтобы от стены до сцены был проход не менее K?</p>
-            <p>S: <input id="S" name="S" type="number" value="0"></p>
-            <p>R: <input id="R" name="R" type="number" value="0"></p>
-            <p>K: <input id="K" name="K" type="number" value="5"></p>
+            <p>S: <input id="S" name="S" type="number" value=""></p>
+            <p>R: <input id="R" name="R" type="number" value=""></p>
+            <p>K: <input id="K" name="K" type="number" value=""></p>
 
             <p>Результат: <input name="result" value="не определён"></p>
             <p>Действие 1: <input id="verify" type="button" value="Проверить"></p>
