--- a/кр1/page5.html
+++ b/кр1/page5.html
@@ -16,8 +16,8 @@
  <form action="" id="UserEnter" name="UserEnter" target="_blank">
     <p>Имя: <input type="Text" name="first_name" size=20  value=""></p>
     <p>Фамилия: <input type="Text" name="last_name" size=20  value=""></p>
-    <p>мяу <input type = "radio" name = "sex" value = "male"></p>
-    <p>мур <input type = "radio" name = "sex" value = "female"> </p>
+    <p>мяу <input type = "radio" name = "cat" value = "meow"></p>
+    <p>мур <input type = "radio" name = "cat" value = "mur"> </p>
     <p>Телефон: <input type="Number" name="number" size=20 value=""></p>
     <p>Электронная почта: <input type="Text" name="mail" size=20  value=""></p>
     <p>Какой сегодня день: <input type="date" name="date" size="20" value=""></p>
