--- a/passport/задача.html
+++ b/passport/задача.html
@@ -19,7 +19,7 @@
 
             <p>Результат: <input name="result" value="не определён"></p>
             <p>Действие 1: <input id="verify" type="button" value="Проверить"></p>
-            <p>Действие 2: <input id="send" type="button" value="Отправить"></p>
+            <p>Действие 2: <input id="send" type="submit" value="Отправить"></p>
 
         </td>
 
