--- a/algorythm/index.html
+++ b/algorythm/index.html
@@ -19,7 +19,7 @@
 
             <p>Результат: <input name="result" value="не определён"></p>
         
-            <p>Действие 2: <input id="send" type="submit" value="Отправить"></p>
+            <p>Действие: <input id="send" type="submit" value="Отправить"></p>
 
         </td>
 
