--- a/кр1/index.html
+++ b/кр1/index.html
@@ -20,7 +20,7 @@
 <img style="position: absolute; top: 280px; left: 1140px" src="бестиарий.png" height="150px" align="right">
 <img style="position: absolute; top: 280px; left: 870px" src="бестиарий.png" height="150px" align="right">
 
-<h4><a style="position: absolute; top: 440px; left: 1100px; color: #b03f35; text-decoration: none;" href="https://vk.com/bestiary5plus">Бестиарий 5+</a></h4>
+<h4><a style="position: absolute; top: 440px; left: 1100px; color: #b03f35; text-decoration: none;" href="https://vk.com/bestiary5plus" target="_blank">Бестиарий 5+</a></h4>
 
 
 
