--- a/algorythm/index.html
+++ b/algorythm/index.html
@@ -13,6 +13,7 @@
         <tr>
         <td>
             <p>Можно ли в квадратном зале площадью S поместить круглую сцену радиусом R так, чтобы от стены до сцены был проход не менее K?</p>
+            <p>Условие: <input id="условие" name="task" type="text" value="Можно ли в квадратном зале площадью S поместить круглую сцену радиусом R так, чтобы от стены до сцены был проход не менее K?"</p>
             <p>S: <input id="S" name="S" type="number" value="0"></p>
             <p>R: <input id="R" name="R" type="number" value="0"></p>
             <p>K: <input id="K" name="K" type="number" value="5"></p>
