--- a/кр1/index.html
+++ b/кр1/index.html
@@ -91,7 +91,7 @@
 
 <img style="position: absolute; top: 1300px; left: 430px" src="кошка.png" height="200px">
 
-<img style="position: absolute; top: 1300px; left: 830px" src="дом.jpeg alt="мяу" title="домик" height="200px">
+<img style="position: absolute; top: 1300px; left: 830px" src="дом.jpeg" alt="мяу" title="домик" height="200px">
 
 
 
