--- a/кр2/index.html
+++ b/кр2/index.html
@@ -62,10 +62,10 @@
 
 
 <div class="container_slider_css" id="meow">
-  <img class="photo_slider_css" src="лёва.png" alt="лёва">
-  <img class="photo_slider_css" src="автопортрет.png" alt="маша">
-  <img class="photo_slider_css" src="сестра.png" alt="катя">
-  <img class="photo_slider_css" src="поля.png" alt="полина">
+  <img class="photo_slider_css" src="лёва.png" alt="лёва" title="лёва">
+  <img class="photo_slider_css" src="автопортрет.png" alt="маша" title="маша">
+  <img class="photo_slider_css" src="сестра.png" alt="катя" title="катя">
+  <img class="photo_slider_css" src="поля.png" alt="полина" title="полина">
 </div>
 <h2 style="position: absolute; top: 900px; left: 720px;">рисунки</h2>
 </body>
