--- a/кр2/index.html
+++ b/кр2/index.html
@@ -53,7 +53,7 @@
  </tbody>
 </table>
 
-<a style="position: absolute; top: 120px; left: 870px;"  href="../кр 1/основная страница.html" target="_self"><img height="150px" src="./бестиарий.png"></a>
+<a style="position: absolute; top: 120px; left: 870px;"  href="../кр 2/index.html" target="_self"><img height="150px" src="./бестиарий.png"></a>
 <img style="position: absolute; top: 120px; left: 1140px" src="./бестиарий.png" height="150px" align="right">
 <img style="position: absolute; top: 260px; left: 1140px" src="./бестиарий.png" height="150px" align="right">
 <img style="position: absolute; top: 260px; left: 870px" src="./бестиарий.png" height="150px" align="right">
