--- a/кр2/index.html
+++ b/кр2/index.html
@@ -54,9 +54,9 @@
 </table>
 
 <a style="position: absolute; top: 120px; left: 870px;"  href="../кр 2/index.html" target="_self"><img height="150px" src="./бестиарий.png"></a>
-<img style="position: absolute; top: 120px; left: 1140px" src="./бестиарий.png" height="150px" align="right">
-<img style="position: absolute; top: 260px; left: 1140px" src="./бестиарий.png" height="150px" align="right">
-<img style="position: absolute; top: 260px; left: 870px" src="./бестиарий.png" height="150px" align="right">
+<img style="position: absolute; top: 120px; left: 1140px" src="./бестиарий.png" height="150px" align="right" title="мур">
+<img style="position: absolute; top: 260px; left: 1140px" src="./бестиарий.png" height="150px" align="right" title="мяв">
+<img style="position: absolute; top: 260px; left: 870px" src="./бестиарий.png" height="150px" align="right" title="мяу">
 
 <h4><a style="position: absolute; top: 440px; left: 1100px; color: #b03f35; text-decoration: none;" href="https://vk.com/bestiary5plus">Бестиарий 5+</a></h4>
 
