--- a/кр2/3.html
+++ b/кр2/3.html
@@ -16,7 +16,7 @@
 
 
 <form action="" id="UserEnter" name="UserEnter" target="_blank">
-    <p>Имя: <input type="Text" name="first_name" size=20  value=""></p>
+    <p>Имя: <input type="Text" name="first_name" size=20  value="" required></p>
     <p>Фамилия: <input type="Text" name="last_name" size=20  value=""></p>
     <p>мяу <input type = "radio" name = "sex" value = "male"></p>
     <p>мур <input type = "radio" name = "sex" value = "female"> </p>
