--- a/кр2/2.html
+++ b/кр2/2.html
@@ -11,19 +11,19 @@
 
 <div class="block_1">
 <h1>алиса. 6 лет, скоро 7</h1>
-    <h3>детство — это когда ты маленький и тебе очень хорошо лежится в кроватке</h3>
+    <h3>маленький</h3>
     <img src="https://gas-kvas.com/uploads/posts/2023-01/1673499739_gas-kvas-com-p-veselie-detskie-risunki-5.png" height="100px">
 </div>
 
 <div class="block_2">
 <h1>аня. 5,5 лет</h1>
-    <h3>детство — это когда ты очень-очень маленький</h3>
+    <h3>маленький</h3>
      <img src="https://gas-kvas.com/uploads/posts/2023-01/1673499739_gas-kvas-com-p-veselie-detskie-risunki-5.png" height="100px">
 </div>
 
 <div class="block_3">
 <h1>давид. 4 года</h1>
-    <h3>детство — это когда я был маленьким</h3>
+    <h3>маленький</h3>
     <img src="https://gas-kvas.com/uploads/posts/2023-01/1673499739_gas-kvas-com-p-veselie-detskie-risunki-5.png" height="100px">
 </div>
 
@@ -35,7 +35,7 @@
 
 <div class="block_5">
 <h1>маша. 4 года</h1>
-    <h3>детство — это когда тебя любят, и сначала они маленькие, а потом взрослые и всем покупают игрушки</h3>
+    <h3>тебя любят</h3>
     <img src="https://gas-kvas.com/uploads/posts/2023-01/1673499739_gas-kvas-com-p-veselie-detskie-risunki-5.png" height="100px">
 
 </div>
@@ -55,7 +55,7 @@
 
 <div class="block_8">
 <h1>олег. 4 года</h1>
-    <h3>детство — это когда человек что-то делает, как делают дети</h3>
+    <h3>детские действия</h3>
     <img src="https://gas-kvas.com/uploads/posts/2023-01/1673499739_gas-kvas-com-p-veselie-detskie-risunki-5.png" height="100px">
 </div>
 
