--- a/project/index.html
+++ b/project/index.html
@@ -190,31 +190,31 @@
             <div class="dossier-card">
                 <img src="img_6.png" class="dossier-photo" alt="Фото">
                 <h3>Яуритре Гринхоф</h3>
-                <p></p>
+                <p>Родилась в 1931 г. в Латвии. Семья выслана в Сибирь в 1941 г. Жила в депортации с мамой и сестрой. Рассказала о депортации в интервью.</p>
             </div>
 
             <div class="dossier-card">
                 <img src="img_4.png" class="dossier-photo" alt="Фото">
                 <h3>Зента Матере</h3>
-                <p>Родилась в 1926 г. в Латвии. Семья выслана в Сибирь в 1941 г. Жила в депортации с мамой и папой.</p>
+                <p>Родилась в 1926 г. в Латвии. Семья выслана в Сибирь в 1941 г. Жила в депортации с мамой и папой. Рассказала о депортации в интервью.</p>
             </div>
 
             <div class="dossier-card">
                 <img src="img_5.png" class="dossier-photo" alt="Фото">
                 <h3>Таливалдис Малкс</h3>
-                <p>написать</p>
+                <p>Родился в 1931 г. в Латвии. Семья выслана в Сибирь в 1941 г. Жил в депортации с папой и мамой. Рассказал о депортации в интервью.</p>
             </div>
 
             <div class="dossier-card">
                 <img src="img_1.png" class="dossier-photo" alt="Фото">
                 <h3>Аушра Юшкайте-Вилкене</h3>
-                <p>Родилась в 1936 г. в Литве. Семья выслана в Сибирь в 1941 г. Жила в депортации с папой, мамой, братом и сестрой.</p>
+                <p>Родилась в 1936 г. в Литве. Семья выслана в Сибирь в 1941 г. Жила в депортации с папой, мамой, братом и сестрой. Написала мемуары о депортации.</p>
             </div>
 
             <div class="dossier-card">
                 <img src="img_3.png" class="dossier-photo" alt="Фото">
                 <h3>Альгирдас Ласкявичюс</h3>
-                <p>Родился в 1932 г. в Литве. Семья выслана в Сибирь в 1941 г. Жил в депортации с мамой и сестрой.</p>
+                <p>Родился в 1932 г. в Литве. Семья выслана в Сибирь в 1941 г. Жил в депортации с мамой и сестрой. Написала мемуары о депортации.</p>
             </div>
 
         </div>
