--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Депортация из прибалтийских республик: взгляд ребёнка</title>
+    <title>Депортация из Прибалтики: взгляд ребёнка</title>
     <style>
         body {
             background-color: #455219;
