--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Депортация из Прибалтики: взгляд ребёнка</title>
+    <title>Депортация из прибалтийских республик: взгляд ребёнка</title>
     <style>
         body {
             background-color: #455219;
@@ -165,7 +165,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="typewriter">Депортация из прибалтийских республик: взгляд ребёнка</h1>
+        <h1 class="typewriter">Депортация из Прибалтики: взгляд ребёнка</h1>
     </div>
 
     <div class="intro">
