--- a/project/index.html
+++ b/project/index.html
@@ -189,7 +189,7 @@
 
             <div class="dossier-card">
                 <img src="img_6.png" class="dossier-photo" alt="Фото">
-                <h3>Яуритре Гринхоф</h3>
+                <h3>Яутрите Гринхоф</h3>
                 <p>Родилась в 1931 г. в Латвии. Семья выслана в Сибирь в 1941 г. Жила в депортации с мамой и сестрой. Рассказала о депортации в интервью.</p>
             </div>
 
